[package]
name = "caltui"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/bLLekz/caltui"
license = "MIT"
license-file = "LICENSE"
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
clap = { version = "4.6.1", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tui-big-text = "0.8.4"
