[package]
name = "caltui"
version = "0.1.2"
edition = "2024"
description = "Simple calc from terminal"
readme = "README.md"
repository = "https://github.com/bLLekz/caltui"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
clap = { version = "4.6.1", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
tui-big-text = "0.8.4"
